header/cpp/CT_Functions.h

////////////////////////////////////////////////////////////////////////////////////////////////////
/// <category>	CT-Funktionen. </category>
/// <categoryE>	CT functions. </categoryE>
///
///
/// <filesummary>	zur Steuerung bzw. Messung der CT Kanäle stehen die folgenden Funktionne zur Verfügung:. </filesummary>
/// <filesummaryE>	for controlling and measuring CT Channels these functions are available: </filesummaryE>
////////////////////////////////////////////////////////////////////////////////////////////////////
MAIV2DLL_EXPORT CT_ClearChannelList(uint nInstance);
MAIV2DLL_EXPORT CT_GetChannelListSize(uint nInstance, uint * nCLSize);
MAIV2DLL_EXPORT CT_SetFrequency(uint nInstance, double fFreqency);
MAIV2DLL_EXPORT CT_GetFrequency(uint nInstance, double * fFrequency);
MAIV2DLL_EXPORT CT_SetCounterParameter(uint nInstance, uint nChannelListEntry, uint eCOUNTERPARAMETER, uint nParameterValue);
MAIV2DLL_EXPORT CT_GetCounterParameter(uint nInstance, uint nChannelListEntry, uint  eCOUNTERPARAMETER, uint*  nParameterValue);
MAIV2DLL_EXPORT CT_GetCounterParametersForMode(uint nInstance, uint  eCOUNTERMODE, uint* AvailableCounterParameters);
MAIV2DLL_EXPORT CT_GetCounterParameterBoundaries(uint nInstance, uint eCOUNTERPARAMETER, uint* nMinValue  , uint*  nMaxValue);
MAIV2DLL_EXPORT CT_GetAvailableCounterModes(uint nInstance, uint nChannel,  uint* eCOUNTERMODES);
MAIV2DLL_EXPORT CT_SetCounterMode(uint nInstance, uint nChannelListEntry,  uint  eCOUNTERMODE);