header/python/maiv2.py


def Realtime_FFT_ReadData(cardID, channelListID, numberOfValues):
	nValues = ctypes.c_uint(numberOfValues)
	arr = (ctypes.c_double * numberOfValues)()
	_internalLObj.Realtime_FFT_ReadData(cardID, channelListID, arr, ctypes.byref(nValues),)
	nparr = np.fromiter(arr, dtype=np.double, count=nValues.value)
	return nparr

def SSI_SetBitWidth(cardID, nBitWidth):
	_internalLObj.SSI_SetBitWidth(cardID, nBitWidth)
	
def SSI_ConfigSSI(cardID, nReset, nResetEdge, nActivePassiveMode, nClockFrequency, nEdge):
	_internalLObj.SSI_ConfigSSI(cardID, nReset, nResetEdge, nActivePassiveMode, nClockFrequency, nEdge)



def TTL_ClearChannelList(cardID):
    _internalLObj.TTL_ClearChannelList(cardID)

def TTL_AddChannelToList(cardID, channelID, bToADList, DigitalTypeID):
    _internalLObj.TTL_AddChannelToList(cardID, channelID, bToADList, DigitalTypeID)

def TTL_GetChannelListSize(cardID):
    retval = ctypes.c_uint(0)
    _internalLObj.TTL_GetChannelListSize(cardID,ctypes.byref(retval))
    return retval.value

def TTL_SetFrequency(cardID, fFrequency):
    _internalLObj.TTL_SetFrequency(cardID, fFrequency)
	
def TTL_SetChannelDirection(cardID, channelID, DirectionID):
    _internalLObj.TTL_SetChannelDirection(cardID, channelID, DirectionID)
	
def TTL_GetChannelDirection(cardID, channelID):
    retval = ctypes.c_uint(0)
    _internalLObj.TTL_GetChannelDirection(cardID, channelID,ctypes.byref(retval))
    return retval.value
	
def TTL_GetBurstSizeInBytes(cardID, numberOfValues, burstSize):
    retval = ctypes.c_uint(0)
    _internalLObj.TTL_GetBurstSize(cardID,ctypes.byref(retval))
    return retval.value
	
def TTL_ReadData(cardID, numberOfValues, burstSize):
	nValuesPerChannel = ctypes.c_uint(numberOfValues)
	nbytesinburst = ctypes.c_uint(burstSize)
	arr = (ctypes.c_char * numberOfValues* burstSize)()
	_internalLObj.TTL_ReadDataExt(cardID,  arr, ctypes.byref(nValuesPerChannel), nbytesinburst, ctypes.None, ctypes.None)
	nparr = np.fromiter(arr, dtype=np.uint8, count=burstSize*nValuesPerChannel.value)
	return nparr

	
def TTL_ReadPort(cardID, PortID):
    retval = ctypes.c_uint(0)
    _internalLObj.TTL_ReadPort(cardID, PortID,ctypes.byref(retval))
    return retval.value
	
def TTL_WritePort(cardID, PortID, nPortValue):
    _internalLObj.TTL_WritePort(cardID, PortID, nPortValue)
	
def TTL_ReadBit(cardID, channelID):
    retval = ctypes.c_uint(0)
    _internalLObj.TTL_ReadBit(cardID, channelID,ctypes.byref(retval))
    return retval.value
	
def TTL_WriteBit(cardID, channelID, nBit):
	_internalLObj.TTL_WriteBit(cardID, channelID, nBit)
 
def TTL_GetStreamPipeLevel(cardID):
    retval = ctypes.c_double(0)
    _internalLObj.TTL_GetStreamPipeLevel(cardID,ctypes.byref(retval))
    return retval.value
def TTL_GetNumberOfValues(cardID):
    retval = ctypes.c_uint(0)
    _internalLObj.TTL_GetNumberOfValues(cardID,ctypes.byref(retval))
    return retval.value
def TTL_InitializeTargetSettings(cardID):
    _internalLObj.TTL_InitializeTargetSettings(cardID)
def TTL_StartMeasure(cardID):
    _internalLObj.TTL_StartMeasure(cardID)
def TTL_StopMeasure(cardID):
    _internalLObj.TTL_StopMeasure(cardID)
def TTL_GetPortInfos(cardID, NumberOfPorts, PortWidth, NumberOfDigIn, NumberOfDigOut):
    r1 = ctypes.c_uint(0)
    r2 = ctypes.c_uint(0)
    r3 = ctypes.c_uint(0)
    r4 = ctypes.c_uint(0)
    _internalLObj.TTL_GetPortInfos(cardID,ctypes.byref(r1), ctypes.byref(r2),ctypes.byref(r3),ctypes.byref(r4))
    retDict = {"NumberOfPorts" : r1.value, "PortWidth": r2.value,"NumberOfDigIn" : r3.value, "NumberOfDigOut": r4.value}
    return retDict
    
    
    
    
    
    

def _getMAILibObject ():
    if sys.platform == 'darwin':
        return ctypes.CDLL('/usr/lib/libmaiv2dll.dylib')
    if sys.platform == 'win32':
        if platform.architecture()[0] == '32bit':
            return ctypes.windll.LoadLibrary("D:\\WorkingSVN\\MAI_V2_2011\\branches\\working\\Ausgabe\\ReleaseLinkedCLR\\maiv2dll.dll")
        else:
            return ctypes.windll.LoadLibrary("D:\\WorkingSVN\\MAI_V2_2011\\branches\\working\\Ausgabe\\ReleaseLinkedCLR\\x64\\maiv2dll.dll")
    # linux pfade :
    if platform.architecture()[0] == '32bit': 
         return ctypes.CDLL('/usr/lib/libmaiv2dll.so')
    else:
         return ctypes.CDLL('/usr/lib/libmaiv2dll.so')   
         
         


def _maierrhandleNoResult (result, func, arguments):
    global _internalLObj
    devnum = 0
    if len(arguments) > 0 : 
        devnum = arguments[0]
    if result < 0 :
        s = ctypes.create_string_buffer('\000',200)	
        _internalLObj.GetErrorDescription(devnum,result,s)
        raise Exception('MAI ERROR !', func.__name__ + ': '+ s.value)
        
    return result

def _maierrhandle (result, func, arguments):
    _maierrhandleNoResult (result, func, arguments)
    return result

def _getFunctionPointers(maiv2libobject):
    global _internalLObj
    
    _internalLObj = maiv2libobject
    _internalLObj.AD_ClearChannelList.argtypes = [ctypes.c_uint]
    _internalLObj.AD_ClearChannelList.restype = ctypes.c_int 
    _internalLObj.AD_ClearChannelList.errcheck = _maierrhandleNoResult
  

    _internalLObj.AD_AddChannelToList.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.AD_AddChannelToList.restype = ctypes.c_int 
    _internalLObj.AD_AddChannelToList.errcheck = _maierrhandleNoResult
 
   
    _internalLObj.AD_GetChannelListSize.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.AD_GetChannelListSize.restype = ctypes.c_int 
    _internalLObj.AD_GetChannelListSize.errcheck = _maierrhandle

    
    _internalLObj.AD_ReadSingleValue.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_int)]
    _internalLObj.AD_ReadSingleValue.restype = ctypes.c_int 
    _internalLObj.AD_ReadSingleValue.errcheck = _maierrhandle
    
    
    _internalLObj.AD_ReadSingleVoltage.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_double)]
    _internalLObj.AD_ReadSingleVoltage.restype = ctypes.c_int 
    _internalLObj.AD_ReadSingleVoltage.errcheck = _maierrhandle
    
    _internalLObj.AD_SetFrequency.argtypes = [ctypes.c_uint, ctypes.c_double]
    _internalLObj.AD_SetFrequency.restype = ctypes.c_int 
    _internalLObj.AD_SetFrequency.errcheck = _maierrhandle
  
    
    _internalLObj.AD_GetFrequency.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_double)]
    _internalLObj.AD_GetFrequency.restype = ctypes.c_int 
    _internalLObj.AD_GetFrequency.errcheck = _maierrhandle
      
    _internalLObj.AD_ReadData.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_double), ctypes.POINTER(ctypes.c_uint), ctypes.c_uint, ctypes.c_uint]
    _internalLObj.AD_ReadData.restype = ctypes.c_int 
    _internalLObj.AD_ReadData.errcheck = _maierrhandle
    
    _internalLObj.AD_ReadBinaryData.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_ubyte), ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.AD_ReadBinaryData.restype = ctypes.c_int 
    _internalLObj.AD_ReadBinaryData.errcheck = _maierrhandle
    
    _internalLObj.AD_GetStreamPipeLevel.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_double)]
    _internalLObj.AD_GetStreamPipeLevel.restype = ctypes.c_int 
    _internalLObj.AD_GetStreamPipeLevel.errcheck = _maierrhandle
    
    
    _internalLObj.AD_GetNumberOfValues.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.AD_GetNumberOfValues.restype = ctypes.c_int 
    _internalLObj.AD_GetNumberOfValues.errcheck = _maierrhandle
    
    _internalLObj.AD_StartMeasure.argtypes = [ctypes.c_uint]
    _internalLObj.AD_StartMeasure.restype = ctypes.c_int 
    _internalLObj.AD_StartMeasure.errcheck = _maierrhandle
    
    _internalLObj.AD_StopMeasure.argtypes = [ctypes.c_uint]
    _internalLObj.AD_StopMeasure.restype = ctypes.c_int 
    _internalLObj.AD_StopMeasure.errcheck = _maierrhandle
    
    _internalLObj.AD_SetIEPE.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.AD_SetIEPE.restype = ctypes.c_int 
    _internalLObj.AD_SetIEPE.errcheck = _maierrhandle
    
    _internalLObj.AD_SetIEPEOnAudioModul.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.AD_SetIEPEOnAudioModul.restype = ctypes.c_int 
    _internalLObj.AD_SetIEPEOnAudioModul.errcheck = _maierrhandle
    
    
    _internalLObj.AD_SetEventToBeRaisedWhenNumberOfBurstsAvailable.argtypes = [ctypes.c_uint, ctypes.c_void_p, ctypes.c_uint]
    _internalLObj.AD_SetIEPEOnAudioModul.restype = ctypes.c_int 
    _internalLObj.AD_SetIEPEOnAudioModul.errcheck = _maierrhandle
    
    _internalLObj.AD_Audio_SetHPFilter.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.AD_Audio_SetHPFilter.restype = ctypes.c_int 
    _internalLObj.AD_Audio_SetHPFilter.errcheck = _maierrhandle
    
    _internalLObj.AD_Audio_SetHPFilterResponse.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.AD_Audio_SetHPFilterResponse.restype = ctypes.c_int 
    _internalLObj.AD_Audio_SetHPFilterResponse.errcheck = _maierrhandle
    
    _internalLObj.AD_ResetIEPE.argtypes = [ctypes.c_uint]
    _internalLObj.AD_ResetIEPE.restype = ctypes.c_int 
    _internalLObj.AD_ResetIEPE.errcheck = _maierrhandle
    
    _internalLObj.AD_GetIEPEType.argtypes = [ctypes.c_uint]
    _internalLObj.AD_GetIEPEType.restype = ctypes.c_int 
    _internalLObj.AD_GetIEPEType.errcheck = _maierrhandle
    	
    _internalLObj.CT_ClearChannelList.argtypes = [ctypes.c_uint]
    _internalLObj.CT_ClearChannelList.restype = ctypes.c_int 
    _internalLObj.CT_ClearChannelList.errcheck = _maierrhandle
    
    _internalLObj.CT_GetChannelListSize.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.CT_GetChannelListSize.restype = ctypes.c_int 
    _internalLObj.CT_GetChannelListSize.errcheck = _maierrhandle
    
    _internalLObj.CT_SetFrequency.argtypes = [ctypes.c_uint, ctypes.c_double]
    _internalLObj.CT_SetFrequency.restype = ctypes.c_int 
    _internalLObj.CT_SetFrequency.errcheck = _maierrhandle
    
    _internalLObj.CT_GetFrequency.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_double)]
    _internalLObj.CT_GetFrequency.restype = ctypes.c_int 
    _internalLObj.CT_GetFrequency.errcheck = _maierrhandle
    
    _internalLObj.CT_SetCounterParameter.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_SetCounterParameter.restype = ctypes.c_int 
    _internalLObj.CT_SetCounterParameter.errcheck = _maierrhandle
    
    _internalLObj.CT_GetCounterParameter.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint,  ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.CT_GetCounterParameter.restype = ctypes.c_int 
    _internalLObj.CT_GetCounterParameter.errcheck = _maierrhandle
    
    _internalLObj.CT_GetCounterParametersForMode.argtypes = [ctypes.c_uint, ctypes.c_uint,  ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.CT_GetCounterParametersForMode.restype = ctypes.c_int 
    _internalLObj.CT_GetCounterParametersForMode.errcheck = _maierrhandle
    
    _internalLObj.CT_GetCounterParameterBoundaries.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.CT_GetCounterParameterBoundaries.restype = ctypes.c_int 
    _internalLObj.CT_GetCounterParameterBoundaries.errcheck = _maierrhandle
    
	
    _internalLObj.CT_GetAvailableCounterModes.argtypes = [ctypes.c_uint, ctypes.c_uint,  ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.CT_GetAvailableCounterModes.restype = ctypes.c_int 
    _internalLObj.CT_GetAvailableCounterModes.errcheck = _maierrhandle
    
	
    _internalLObj.CT_SetCounterMode.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_SetCounterMode.restype = ctypes.c_int 
    _internalLObj.CT_SetCounterMode.errcheck = _maierrhandle
